adjust html classes
Co-authored-by: JohnNils Olson <johnnils@gmail.com>
Co-authored-by: Ian Scott <chesnekov@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,5 +14,14 @@ h1.flashy{
 }
 
 h3.best{
-  font-style: 
+  font-style: bold;
+  font-size: 50px;
+  color: purple
+}
+
+ul.best{
+  font-style: bold;font-style: bold;
+  font-size: 50px;
+  color: purple
+  color: purple
 }
